--- a/.env_TEMPLATE
+++ b/.env_TEMPLATE
@@ -6,4 +6,4 @@ ENV_DRAW_X_START="867"
 ENV_DRAW_Y_START="320"
 ENV_R_START='["0"]'
 ENV_C_START='["0"]'
-ENV_DIRECTOR_URL='ws://localhost:4227'
+ENV_DIRECTOR_URL='ws://box.mcmoo.org:4227'
