--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "Pillow~=10.0.0",
     "websocket-client~=1.3.2",
     "colorama==0.4.4",
-    "websockets~=10.2",
+    "websockets>=11.0.3",
     "aioconsole~=0.4.1",
     "beautifulsoup4>=4.12.2",
 ]
