--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "websockets>=11.0.3",
     "aioconsole~=0.4.1",
     "beautifulsoup4>=4.12.2",
+    "requests-tor>=1.4",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
